cargo-featuresm = ["edition2024"]

[package]
name = "rust_inference"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
tch = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"

[dependencies.uuid]
version = "1.17.0"
features = ["v4", "serde"]

[dev-dependencies]
serde_test = "1.0.177"
